samples/_failures_safe/1761311426_294f14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f3ed82d.c: In function ‘main’:
./samples/SAFE/__tmp_7f3ed82d.c:135:9: error: expected declaration or statement at end of input
  135 |         printf("\nEnter elements for matrix 1:\n");
      |         ^~~~~~
./samples/SAFE/__tmp_7f3ed82d.c:135:9: error: expected declaration or statement at end of input
